--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,25 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "NanumSquare";
+  src: url("../public/fonts/NanumSquareR.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "NanumSquare";
+  src: url("../public/fonts/NanumSquareB.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Tailwind의 기본 sans 폰트로 설정 */
+:root {
+  --font-sans: "NanumSquare", sans-serif;
+}
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,4 +43,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
