--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@tailwind utilities;
 
 @font-face {
   font-family: "NanumSquare";
@@ -19,28 +20,16 @@
 :root {
   --font-sans: "NanumSquare", sans-serif;
 }
-/* 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  .scrollbar-yellow::-webkit-scrollbar {
+    width: 6px;
+  }
+  .scrollbar-yellow::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  .scrollbar-yellow::-webkit-scrollbar-thumb {
+    background-color: #facc15; /* yellow-400 */
+    border-radius: 9999px;
   }
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
